--- a/solutions/html_css_Labs/lab1.html
+++ b/solutions/html_css_Labs/lab1.html
@@ -8,6 +8,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <style>
+        h1 {
+            text-align: center;
+            color: lightcoral
+        }
         body {
             background-color: lightblue;
         }
@@ -17,7 +21,7 @@
             border-radius: 10px;
         }
         p {
-            margin: 10px;
+            margin: 10px auto;
             padding: 10px;
             border: 2px solid lightcoral;
             border-radius: 15px;
@@ -31,25 +35,26 @@
             font-family: 'Caveat', cursive; 
         }
         ul {
-            list-style-image: url("basketball.jpg" )
+            list-style: '🏀';
+            list-style-position: inside;
         }
     </style>
 </head>
 
 <body>
     
-    <h1 style="text-align: center">
-        Wilt Chamberlain
+    <h1>
+        <div>Wilt Chamberlain</div>
     </h1>
     <hr/>
     <center><img src="Wilt_Chamberlain3.jpg" class="pic"/></center>
     <p>
-        Wilton Norman Chamberlain (/ˈtʃeɪmbərlɪn/; August 21, 1936 – October 12, 1999) was an American basketball player
-        who played as a center and is considered one of the greatest players in history.[1][2] He played for the
+        Wilton Norman Chamberlain (August 21, 1936 – October 12, 1999) was an American basketball player
+        who played as a center and is considered one of the greatest players in history. He played for the
         Philadelphia/San Francisco Warriors, the Philadelphia 76ers, and the Los Angeles Lakers of the National
         Basketball Association (NBA). He played for the University of Kansas and also for the Harlem Globetrotters
         before playing in the NBA. Chamberlain stood 7 ft 1 in (2.16 m) tall, and weighed 250 pounds (110 kg) as a
-        rookie[3] before bulking up to 275 and eventually to over 300 pounds (140 kg) with the Lakers
+        rookie[3] before bulking up to 275 and eventually to over 300 pounds (140 kg) with the Lakers.
         
     </p>
     <h4>
