--- a/solutions/html_css_Labs/lab1.html
+++ b/solutions/html_css_Labs/lab1.html
@@ -12,14 +12,19 @@
             text-align: center;
             color: lightcoral
         }
+
         body {
+            height: 100%;
+            margin: 0;
             background-color: lightblue;
         }
+
         .pic {
             width: 25%;
             height: 25%;
             border-radius: 10px;
         }
+
         p {
             margin: 10px auto;
             padding: 10px;
@@ -27,27 +32,37 @@
             border-radius: 15px;
             text-align: center;
             font-family: 'Roboto Mono', monospace;
+            color: yellow;
         }
+
         h4 {
             text-align: center;
+            color: yellow;
         }
+
         .quote {
-            font-family: 'Caveat', cursive; 
+            font-family: 'Caveat', cursive;
         }
+
         ul {
             list-style: '🏀';
             list-style-position: inside;
+            color: yellow;
+        }
+
+        a {
+            color: lightskyblue;
         }
     </style>
 </head>
 
 <body>
-    
+
     <h1>
         <div>Wilt Chamberlain</div>
     </h1>
-    <hr/>
-    <center><img src="Wilt_Chamberlain3.jpg" class="pic"/></center>
+    <hr />
+    <center><img src="Wilt_Chamberlain3.jpg" class="pic" /></center>
     <p>
         Wilton Norman Chamberlain (August 21, 1936 – October 12, 1999) was an American basketball player
         who played as a center and is considered one of the greatest players in history. He played for the
@@ -55,21 +70,23 @@
         Basketball Association (NBA). He played for the University of Kansas and also for the Harlem Globetrotters
         before playing in the NBA. Chamberlain stood 7 ft 1 in (2.16 m) tall, and weighed 250 pounds (110 kg) as a
         rookie[3] before bulking up to 275 and eventually to over 300 pounds (140 kg) with the Lakers.
-        
+
     </p>
     <h4>
         Where Wilt has lived
-    </h5>
-    <center><ul>
-        <li>Philadelphia, PA</li>
-        <li>Lawrence, KS</li>
-    </ul></center>
-    <p class="quote">
-        "I believe that good things come to those who work." - Wilt Chamberlain
-    </p>
-    <p><a href="https://en.wikipedia.org/wiki/Wilt_Chamberlain" target="_blank">link to Wilt Chamberlain wiki
-        article</a>
-    </p>
+        </h5>
+        <center>
+            <ul>
+                <li>Philadelphia, PA</li>
+                <li>Lawrence, KS</li>
+            </ul>
+        </center>
+        <p class="quote">
+            "I believe that good things come to those who work." - Wilt Chamberlain
+        </p>
+        <p><a href="https://en.wikipedia.org/wiki/Wilt_Chamberlain" target="_blank">link to Wilt Chamberlain wiki
+                article</a>
+        </p>
 
 </body>
 
