--- a/solutions/html_css_Labs/lab1.html
+++ b/solutions/html_css_Labs/lab1.html
@@ -10,13 +10,18 @@
     <style>
         h1 {
             text-align: center;
-            color: lightcoral
+            color: darkorange;
+            font-size: 50px;
         }
 
         body {
             height: 100%;
             margin: 0;
-            background-color: lightblue;
+            background-image: url('https://www.nba.com/images/cms/2019-03/wilt-chamberlain-celtics-archives.jpg?cw=1920&w=2764&x=513&ch=1080&h=1842&y=261');
+            background-position: top center;
+            background-repeat: no-repeat;
+            margin: 0;
+            background-size: cover;
         }
 
         .pic {
@@ -28,30 +33,34 @@
         p {
             margin: 10px auto;
             padding: 10px;
-            border: 2px solid lightcoral;
+            border: 2px solid salmon;
             border-radius: 15px;
             text-align: center;
             font-family: 'Roboto Mono', monospace;
-            color: yellow;
+            color: darkorange;
         }
 
-        h4 {
+        h3 {
             text-align: center;
-            color: yellow;
+            color: darkorange;
+            font-size: 30px;
         }
 
         .quote {
             font-family: 'Caveat', cursive;
+            font-size: 30px;
+            color: darkred
         }
 
         ul {
             list-style: '🏀';
             list-style-position: inside;
-            color: yellow;
+            color: seagreen;
+            font-size: 25px;
         }
 
         a {
-            color: lightskyblue;
+            color: seagreen;
         }
     </style>
 </head>
@@ -72,7 +81,7 @@
         rookie[3] before bulking up to 275 and eventually to over 300 pounds (140 kg) with the Lakers.
 
     </p>
-    <h4>
+    <h3>
         Where Wilt has lived
         </h5>
         <center>
