--- a/solutions/html_css_Labs/lab1.html
+++ b/solutions/html_css_Labs/lab1.html
@@ -79,6 +79,27 @@
         Basketball Association (NBA). He played for the University of Kansas and also for the Harlem Globetrotters
         before playing in the NBA. Chamberlain stood 7 ft 1 in (2.16 m) tall, and weighed 250 pounds (110 kg) as a
         rookie[3] before bulking up to 275 and eventually to over 300 pounds (140 kg) with the Lakers.
+        
+        Chamberlain holds numerous NBA records in scoring, rebounding, and durability categories. He is the only player
+        to score 100 points in a single NBA game or average more than 40 and 50 points in a season. He won seven
+        scoring, eleven rebounding, and nine field goal percentage titles and led the league in assists once.[2]
+        Chamberlain is the only player in NBA history to average at least 30 points and 20 rebounds per game in a
+        season, which he accomplished seven times. He is also the only player to average at least 30 points and 20
+        rebounds per game over the entire course of his NBA career. Although he suffered a long string of losses in the
+        playoffs,[4] Chamberlain had a successful career, winning two NBA championships, earning four regular-season
+        Most Valuable Player awards, the Rookie of the Year award, one NBA Finals MVP award, and was selected to 13
+        All-Star Games and ten All-NBA First and Second teams.[1][5] He was subsequently enshrined in the Naismith
+        Memorial Basketball Hall of Fame in 1978, elected into the NBA's 35th Anniversary Team of 1980, and in 1996 he
+        was chosen as one of the 50 Greatest Players in NBA History.[5]
+
+        Chamberlain was known by several nicknames during his basketball playing career. He hated the ones that called
+        attention to his height, such as "Goliath" and "Wilt the Stilt". A Philadelphia sportswriter coined the
+        nicknames during Chamberlain's high school days. He preferred "The Big Dipper", which was inspired by his
+        friends who saw him dip his head as he walked through doorways.[6] After his professional basketball career
+        ended, Chamberlain played volleyball in the short-lived International Volleyball Association, was president of
+        that organization, and is enshrined in the IVA Hall of Fame for his contributions.[7] He was a successful
+        businessman, authored several books, and appeared in the movie Conan the Destroyer. He was a lifelong bachelor
+        and became notorious for his claim of having had sexual relations with as many as 20,000 women.
 
     </p>
     <h3>
