--- a/solutions/html_css_Labs/lab1.html
+++ b/solutions/html_css_Labs/lab1.html
@@ -49,18 +49,21 @@
         .quote {
             font-family: 'Caveat', cursive;
             font-size: 30px;
-            color: darkred
+            color: salmon;
         }
 
         ul {
             list-style: '🏀';
             list-style-position: inside;
-            color: seagreen;
+            color: salmon;
             font-size: 25px;
         }
 
         a {
             color: seagreen;
+        }
+        .makecenter {
+            text-align: center;
         }
     </style>
 </head>
@@ -71,7 +74,7 @@
         <div>Wilt Chamberlain</div>
     </h1>
     <hr />
-    <center><img src="Wilt_Chamberlain3.jpg" class="pic" /></center>
+    <div class='makecenter'><img src="Wilt_Chamberlain3.jpg" class="pic" /></div>
     <p>
         Wilton Norman Chamberlain (August 21, 1936 – October 12, 1999) was an American basketball player
         who played as a center and is considered one of the greatest players in history. He played for the
@@ -79,7 +82,7 @@
         Basketball Association (NBA). He played for the University of Kansas and also for the Harlem Globetrotters
         before playing in the NBA. Chamberlain stood 7 ft 1 in (2.16 m) tall, and weighed 250 pounds (110 kg) as a
         rookie[3] before bulking up to 275 and eventually to over 300 pounds (140 kg) with the Lakers.
-        
+
         Chamberlain holds numerous NBA records in scoring, rebounding, and durability categories. He is the only player
         to score 100 points in a single NBA game or average more than 40 and 50 points in a season. He won seven
         scoring, eleven rebounding, and nine field goal percentage titles and led the league in assists once.[2]
@@ -105,12 +108,14 @@
     <h3>
         Where Wilt has lived
         </h5>
-        <center>
+        <div class="makecenter">
             <ul>
                 <li>Philadelphia, PA</li>
                 <li>Lawrence, KS</li>
+                <li>New York, NY</li>
+                <li>Los Angeles, CA</li>
             </ul>
-        </center>
+        </div>
         <p class="quote">
             "I believe that good things come to those who work." - Wilt Chamberlain
         </p>
