--- a/lab3company.html
+++ b/lab3company.html
@@ -9,30 +9,187 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@800&display=swap" rel="stylesheet">
     <title>Portland Tarsier Rescue</title>
     <style>
         h1 {
             text-align: center;
             background-color: rgba(255, 255, 240, .4);
         }
+
         #top-bar {
             justify-content: flex-start;
         }
 
+        .stickycontainer {
+            position: -webkit-sticky;
+            position: sticky;
+            top: 0px;
+            z-index: 2;
+        }
+
+        #top-bar>div {
+            padding-right: 20px;
+        }
+
+        #top-bar>a {
+            padding-right: 20px;
+            color: black;
+        }
+
+        #carousel-box {
+            height: 300px;
+            width: 500px;
+            margin-top: 2%;
+            margin-bottom: 10%;
+            padding-bottom: 10%;
+        }
+
+        #brand {
+            font-size: large;
+            font-family: 'Nunito', sans-serif;
+        }
+
+        /* #linkhover:hover {
+            color: green;
+        } */
     </style>
 </head>
 
 <body>
-    <div class="container">
-        <div class="navbar" id="top-bar">
-            <div>Portland Tarsier Rescue</div>
-            <div>LInk</div>
-        </div>
+    <div class="stickycontainer">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light" id="top-bar">
+            <a id="brand" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">🍌 Portland Tarsier Rescue 🍌</a>
+            <div>Mission</div>
+            <div>What are Tarsiers</div>
+            <div>Who we are</div>
+        </nav>
     </div>
+
     <h1>Portland Tarsier Rescue</h1>
 
 
+
+
+
+
+
+
+    <div id="carousel-box" class="container">
+        <div id="carouselControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a4/Tarsius_spectrumgurskyae.jpg"
+                        class="d-block w-100">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://www.treehugger.com/thmb/JcFgxqNhk3uTg3WkhOyafp3qt-I=/735x0/__opt__aboutcom__coeus__resources__content_migration__mnn__images__2015__04__tarsiers-lead-dd4af97041c846cfab66bd1d6999d10e.jpg"
+                        class="d-block w-100">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://th.thgim.com/migration_catalog/article10467777.ece/alternates/FREE_435/03mp_shalini2.jpg"
+                        class="d-block w-100">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://lh3.googleusercontent.com/proxy/wr-FIP_YmT6CaVLV4D8nxNpXSBSP9v7tdx5tcSN-33zZtNZSNfdaMVMKer_tLD1nzGc_CuL25xyBoPYJXKO4Ag4HRt36Cj6tVIqpVBvDR-mp6IqUXZU0j6yGQe6FwyBQELXftBaTMQ"
+                        class="d-block w-100">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </div>
+    <div class="container">
+        <p>Series A financing ownership prototype infographic direct mailing. Success user experience research &
+            development supply chain handshake partnership influencer responsive web design bandwidth non-disclosure
+            agreement niche market funding twitter. Founders ecosystem supply chain business model canvas holy grail
+            direct
+            mailing. Ecosystem virality creative deployment release partnership entrepreneur value proposition partner
+            network A/B testing branding android buyer conversion. Innovator virality graphical user interface growth
+            hacking hypotheses buzz holy grail bandwidth buyer deployment long tail responsive web design release
+            partner
+            network. Sales iPhone android venture founders mass market business-to-consumer channels beta deployment
+            facebook. Hackathon agile development deployment social proof crowdfunding supply chain first mover
+            advantage
+            learning curve A/B testing twitter. Business-to-business growth hacking niche market paradigm shift
+            partnership
+            ownership market lean startup network effects. Leverage client alpha marketing product management graphical
+            user
+            interface burn rate accelerator seed round research & development sales ownership. Ownership focus
+            interaction
+            design prototype technology investor influencer virality sales graphical user interface.</p>
+
+        <p>rate series A financing lean startup investor influencer. Disruptive seed money conversion crowdfunding
+            innovator interaction design. Client accelerator beta bandwidth investor partner network ecosystem assets
+            burn
+            rate A/B testing crowdfunding supply chain. Analytics MVP pitch burn rate ownership twitter entrepreneur
+            creative supply chain buyer. Termsheet buzz scrum project graphical user interface low hanging fruit
+            partnership. Business plan graphical user interface virality buyer deployment product management handshake
+            responsive web design funding disruptive buzz. Return on investment supply chain product management.
+            Analytics
+            hackathon termsheet ramen branding validation startup. Supply chain agile development value proposition
+            client
+            vesting period traction incubator buzz direct mailing startup niche market gamification bootstrapping.
+            Conversion ecosystem gamification pitch return on investment gen-z paradigm shift product management lean
+            startup.</p>
+
+        <p>Creative android seed round responsive web design strategy. Mass market return on investment focus release
+            handshake partner network influencer research & development backing infrastructure prototype strategy
+            business
+            plan. Non-disclosure agreement technology startup prototype release. Success bootstrapping crowdsource iPad
+            analytics return on investment. Supply chain business-to-consumer business-to-business rockstar twitter
+            gen-z
+            facebook equity hypotheses deployment. Early adopters traction business-to-business infographic leverage
+            learning curve alpha influencer ownership gamification conversion. Rockstar seed round channels partner
+            network
+            marketing founders buyer social proof responsive web design conversion graphical user interface innovator.
+            Freemium supply chain hypotheses iPad angel investor buzz prototype. Scrum project deployment marketing.
+            Assets
+            early adopters termsheet MVP long tail scrum project twitter incubator sales.</p>
+
+        <p>Scrum project sales non-disclosure agreement conversion ramen technology marketing disruptive product
+            management
+            deployment equity network effects branding facebook. Advisor return on investment business plan niche market
+            agile development gamification channels burn rate. Growth hacking deployment launch party startup long tail
+            series A financing branding churn rate conversion. Graphical user interface infographic sales partnership
+            alpha
+            virality innovator supply chain ownership bootstrapping return on investment backing. Non-disclosure
+            agreement
+            technology launch party rockstar burn rate angel investor disruptive branding churn rate bootstrapping
+            learning
+            curve founders iPhone. MVP pivot assets accelerator twitter partnership growth hacking. Low hanging fruit
+            android influencer iPad facebook analytics metrics graphical user interface crowdsource MVP scrum project.
+            Validation startup infographic. Pitch graphical user interface user experience responsive web design
+            strategy
+            series A financing seed money business model canvas deployment. Validation A/B testing marketing seed money
+            paradigm shift bandwidth business plan innovator.</p>
+
+        <p>Niche market scrum project iteration MVP pitch funding venture handshake startup traction disruptive metrics
+            monetization marketing. Series A financing handshake agile development metrics. Termsheet business plan
+            metrics
+            partner network beta infographic influencer. Launch party deployment entrepreneur network effects venture
+            return
+            on investment. Freemium market hackathon branding social proof non-disclosure agreement traction assets
+            paradigm
+            shift MVP partner network. Leverage disruptive A/B testing funding low hanging fruit launch party vesting
+            period
+            paradigm shift. Accelerator vesting period user experience iPad lean startup backing virality growth hacking
+            rockstar ramen. Social proof social media gamification paradigm shift validation bootstrapping advisor angel
+            investor mass market bandwidth business model canvas buyer. Deployment founders termsheet technology
+            entrepreneur ramen series A financing influencer crowdfunding creative seed money alpha. Twitter beta holy
+            grail
+            social media traction pivot research & development technology responsive web design focus venture return on
+            investment long tail hypotheses.</p>
+    </div>
+    <div class="container">
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">don't click this link</a>
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
