--- a/lab3company.html
+++ b/lab3company.html
@@ -12,6 +12,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@800&display=swap" rel="stylesheet">
     <title>Portland Tarsier Rescue</title>
     <style>
+        body {
+            background-color: rgba(236, 180, 180, 0.4);
+        }
         h1 {
             text-align: center;
             background-color: rgba(255, 255, 240, .4);
