--- a/solutions/Javascript/js_lab03.html
+++ b/solutions/Javascript/js_lab03.html
@@ -17,6 +17,17 @@
     </div>
     <button id="run_bt">Rotate</button>
     <div id="outputDiv"></div>
+    <div>
+        This is the Rot decryptor. The first box is the rotation number of the encrypted text. Enter your text in the last box.
+    </div>
+    <div>
+        <input id="rotNumBack" type="text"/>
+    </div>
+    <div>
+        <input id="inputTextBack" type="text"/>
+    </div>
+    <button id="run_bt_back">Rotate</button>
+    <div id="outputDivBack"></div>
 
     <script type="text/javascript" src="lab03.js"></script>
 </body>
